--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,12 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+            ],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
@@ -83,10 +88,14 @@
             ],
             "styles": [
               "src/styles.css"
+            
             ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
