--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "ngx-skeleton-loader": "^11.2.1",
