--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@angular/router": "^20.0.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
+    "@tailwindcss/postcss": "^4.1.12",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "ngx-skeleton-loader": "^11.2.1",
     "ngx-toastr": "^19.0.0",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
