--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^20.0.6",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
+    "@primeng/themes": "^20.1.2",
     "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
